src/objects/RO_OAE_Template__c.object
<CustomObject>
    <fields>
        <fullName>Auto_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auto task that will run when this template is selected.</description>
        <label>Auto Task</label>
        <referenceTo>Auto_Task__c</referenceTo>
        <relationshipLabel>RO &amp; OAE Templates</relationshipLabel>
        <relationshipName>RO_OAE_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ROAE_Description__c</fullName>
        <description>Template description</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RO &amp; OAE Templates</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RO &amp; OAE Templates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RO &amp; OAE Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>